--- a/manage-landing-page-master/style.css
+++ b/manage-landing-page-master/style.css
@@ -528,7 +528,27 @@ margin-left: 95px;
 margin-top: 30px;
 }
 
+.section-container1 {
+  display: flex;
+  flex-direction: column;
+  gap: 1px;
+  margin-top: 90px;
+}
 
+.article-container-1 {
+  height: 200px;
+  margin-left: 1px;
+  /* border: 2px solid red; */
+  text-align: center;
+}
+
+.child-section {
+  width: 100%;
+}
+
+.article-container-2 {
+  text-align: left;
+}
 
 }
 
