--- a/manage-landing-page-master/style.css
+++ b/manage-landing-page-master/style.css
@@ -180,7 +180,6 @@
   border: none;
   font-size: 13px;
   font-weight: 500;
-  /* padding: 1px; */
   padding: 0px 20px;
   border-radius: 10px;
   width: 20px;
@@ -203,6 +202,7 @@
 max-width: 1120px;
 width: 100%;
 background-color: grey;
+padding: 40px 0;
 }
 
 
